--- a/client/src/sass/application.scss
+++ b/client/src/sass/application.scss
@@ -290,6 +290,10 @@ ngb-tabset.bootstrap {
       @include disable-default-a-behaviour;
 
       color: var(--mainForegroundColor) !important;
+
+      &.active {
+        color: #000 !important;
+      }
     }
   }
 }
